--- a/retype.yml
+++ b/retype.yml
@@ -1,13 +1,15 @@
 input: .
 output: .retype
-url: # Add your website address here
+url: https://underthelights.github.io/DAVENGERS/
 branding:
-  title: DEVENGERS
+  title: DAVENGERS
   label: PRJ
 links:
-- text: 탄소 발자국 계산기
+- text: 여행 관련 탄소발자국 계산기 구축
   link: /carbon-footprint
-- text: 여행 경로 추천
-  link: /path
+- text: 친환경 제주여행 루트 추천 시스템 구축과 팁 제안
+  link: /recsys
+- text: Authors
+  link: /authors
 footer:
-  copyright: "&copy; Copyright {{ year }}. All rights reserved."
+  copyright: "&copy; Copyright {{ year }}. DAVENGERS. All rights reserved."
